--- a/mini-project-III.ipynb
+++ b/mini-project-III.ipynb
@@ -844,12 +844,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hRfc7ruXwsRF",
-        "outputId": "023ec18b-9bce-4ac1-9472-dcc412bb9833",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
-        }
+        },
+        "id": "hRfc7ruXwsRF",
+        "outputId": "023ec18b-9bce-4ac1-9472-dcc412bb9833"
       },
       "source": [
         "df_transactions"
@@ -1438,6 +1438,8 @@
         "id": "wb8K1HYYpATb"
       },
       "source": [
+        "#are they making lot of small transactions or few huge ones?\n",
+        "#remove the 15K ones\n",
         "das=df_transactions[['tran_id','tran_amt']].to_numpy()\n",
         "km = KMeans(n_clusters=5, # how many clusters we expected \n",
         "            n_init=20, # how many initial runs\n",
@@ -1451,12 +1453,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CEKrloHIpnku",
-        "outputId": "9f102695-47b7-44f2-ee4d-ffc0d7502263",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        }
+        },
+        "id": "CEKrloHIpnku",
+        "outputId": "9f102695-47b7-44f2-ee4d-ffc0d7502263"
       },
       "source": [
         "def plot_clusters(X,y_res, plt_cluster_centers = False):\n",
@@ -1510,12 +1512,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_JjpJUdt6fQ",
-        "outputId": "346641a1-26da-44dc-e508-c59739a324ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        }
+        },
+        "id": "b_JjpJUdt6fQ",
+        "outputId": "346641a1-26da-44dc-e508-c59739a324ef"
       },
       "source": [
         "#============Takes 2 features from dataframe to numpy array and prepare to send it to the scatterplot\n",
@@ -1547,12 +1549,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rrmsoaoW1K-Q",
-        "outputId": "d8caf1f1-bd00-49ae-e5c4-e2036b6281cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        }
+        },
+        "id": "rrmsoaoW1K-Q",
+        "outputId": "d8caf1f1-bd00-49ae-e5c4-e2036b6281cd"
       },
       "source": [
         "#============Takes 2 features from dataframe to numpy array and prepare to send it to the scatterplot\n",
